feat: docker is finally working
- updated authHandler to manage step-by-step registration form
- updated register page design to provide a "google" like experience
- added a server script to load the user data unless there is none, in which case send user to login

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,12 +7,21 @@ services:
     restart: unless-stopped
     init: true
     ports:
-      - "5173:5173"  # Expose SvelteKit preview server
+      - "5173:5173" # Expose SvelteKit preview server
     # env_file: ./frontend/.env  # Uncomment if .env file exists
     networks:
       - appnet
-  # golang-backend: 
-    
+  golang-backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: golang-backend
+    restart: unless-stopped
+    init: true
+    ports:
+      - "8080:8080"
+    networks:
+      - appnet
 
 # No external services (databases, caches, etc.) were detected in the documentation or source tree.
 # No persistent volumes are required for the frontend service.
