--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     ports:
       - "0.0.0.0:3000:3000"
     environment:
-      - ORIGIN=http://localhost:3000
+      - ORIGIN=http://89.117.50.20:3000
       - BODY_SIZE_LIMIT=Infinity
       - BACKEND_URL=http://backend:8080
     depends_on:
