feat: update npm dependencies and package configuration
- Update package.json with new dependencies and scripts
- Update package-lock.json with resolved dependency versions
- Add new testing and development dependencies
- Improve build and development workflow

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,39 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"dev": "npm run dev",
+		"build": "npm run build",
+		"preview": "npm run preview",
+		"prepare": "npm run svelte-kit sync || echo ''",
+		"check": "npm run svelte-kit sync && npm run svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "npm run svelte-kit sync && npm run svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "npm run vitest",
+		"test:unit": "npm run vitest run tests/unit",
+		"test:integration": "npm run vitest run --config vitest.integration.config.ts",
+		"test:e2e": "npm run playwright test",
+		"test:e2e:ui": "npm run playwright test --ui",
+		"test:coverage": "npm run vitest run --coverage",
+		"test:watch": "npm run vitest --watch",
+		"test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+		"test:runner": "npm run scripts/test-runner.js"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.56.0",
 		"@sveltejs/adapter-auto": "^6.1.1",
 		"@sveltejs/adapter-node": "^5.3.3",
 		"@sveltejs/kit": "^2.46.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/svelte": "^5.2.8",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/node": "^24.7.2",
+		"happy-dom": "^20.0.1",
+		"jsdom": "^27.0.0",
 		"svelte": "^5.39.11",
 		"svelte-check": "^4.3.3",
 		"typescript": "^5.9.3",
-		"vite": "^7.1.9"
+		"vite": "^7.1.9",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.14",
