fix: resolve Docker build issues and configure ESLint
- Fix backend Docker configuration (go version mismatch, upload directory handling)
- Fix frontend Dockerfile CMD and add memory limits to prevent OOM
- Add ESLint configuration with TypeScript and Svelte support
- Fix Svelte 5 $derived syntax in Button and Input components for proper reactivity
- Remove unnecessary self-assignments in course creation (Svelte 5 reactivity)
- Fix vite.config to prevent SvelteKit bundling errors
- Add lint scripts to package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       build:
          context: ./frontend
          dockerfile: Dockerfile
+         shm_size: '2gb'
       container_name: skillswap-frontend
       ports:
          - '0.0.0.0:80:3000'
@@ -48,16 +49,24 @@ services:
          - ORIGIN=http://89.117.50.20
          - BODY_SIZE_LIMIT=Infinity
          - BACKEND_URL=http://backend:8080
+         - NODE_OPTIONS=--max-old-space-size=4096
       depends_on:
          backend:
             condition: service_started
       networks:
          - skillswap-network
       restart: unless-stopped
+      deploy:
+         resources:
+            limits:
+               memory: 6G
+            reservations:
+               memory: 2G
 
    updater:
       image: containrrr/watchtower
       container_name: skillswap-updater
+      profiles: ['manual']  # Disabled by default - start manually with: docker-compose --profile manual up updater
       volumes:
          - /var/run/docker.sock:/var/run/docker.sock
          - ./:/app
@@ -73,6 +82,7 @@ services:
    autoupdate:
       image: alpine/git
       container_name: skillswap-git-puller
+      profiles: ['manual']  # Disabled by default - start manually with: docker-compose --profile manual up autoupdate
       working_dir: /app
       volumes:
          - ./:/app
