--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,26 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "npm run dev",
-		"build": "npm run build",
-		"preview": "npm run preview",
-		"prepare": "npm run svelte-kit sync || echo ''",
-		"check": "npm run svelte-kit sync && npm run svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "npm run svelte-kit sync && npm run svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "npm run vitest",
-		"test:unit": "npm run vitest run tests/unit",
-		"test:integration": "npm run vitest run --config vitest.integration.config.ts",
-		"test:e2e": "npm run playwright test",
-		"test:e2e:ui": "npm run playwright test --ui",
-		"test:coverage": "npm run vitest run --coverage",
-		"test:watch": "npm run vitest --watch",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"test": "vitest",
+		"test:unit": "vitest run tests/unit",
+		"test:integration": "vitest run --config vitest.integration.config.ts",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:coverage": "vitest run --coverage",
+		"test:watch": "vitest --watch",
 		"test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
-		"test:runner": "npm run scripts/test-runner.js"
+		"test:runner": "node scripts/test-runner.js"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.37.0",
 		"@playwright/test": "^1.56.0",
 		"@sveltejs/adapter-auto": "^6.1.1",
 		"@sveltejs/adapter-node": "^5.3.3",
@@ -30,10 +33,16 @@
 		"@testing-library/svelte": "^5.2.8",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^24.7.2",
+		"@typescript-eslint/eslint-plugin": "^8.46.1",
+		"@typescript-eslint/parser": "^8.46.1",
+		"eslint": "^9.37.0",
+		"eslint-plugin-svelte": "^3.12.4",
+		"globals": "^16.4.0",
 		"happy-dom": "^20.0.1",
 		"jsdom": "^27.0.0",
 		"svelte": "^5.39.11",
 		"svelte-check": "^4.3.3",
+		"svelte-eslint-parser": "^1.3.3",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.9",
 		"vitest": "^3.2.4"
