--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,4 @@ local.*
 backend/uploads*
 backend/uploads/*
 frontend/test-results/*
-frontend/playwright-report.cursor/
+frontend/playwright-report/*
